force-app/main/default/objects/Archival_And_Big_Object_Link__c/Archival_And_Big_Object_Link__c.object-meta.xml
<CustomObject>
    <label>Archival And Big Object Link</label>
    <nameField>
        <displayFormat>ABOL-{00000}</displayFormat>
        <label>Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Archival And Big Object Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>