force-app/main/default/objects/Archival_And_Big_Object_Link__c/fields/Archival_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Archival_Configuration__c</fullName>
    <label>Archival Configuration</label>
    <referenceTo>Archival_Configuration__c</referenceTo>
    <relationshipLabel>Archival And Big Object Links</relationshipLabel>
    <relationshipName>Archival_And_Big_Object_Links1</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>