force-app/main/default/objects/Archival_And_Big_Object_Link__c/fields/Archival_Parent_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Archival_Parent_Object_Name__c</fullName>
    <formula>Archival_Configuration__r.Parent_Object_API_Name__c</formula>
    <label>Archival Parent Object Name</label>
    <type>Text</type>
</CustomField>