force-app/main/default/objects/Archival_And_Big_Object_Link__c/fields/Big_Object_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Big_Object_Configuration__c</fullName>
    <label>Big Object Configuration</label>
    <referenceTo>Big_Object_Configuration__c</referenceTo>
    <relationshipLabel>Archival And Big Object Links</relationshipLabel>
    <relationshipName>Archival_And_Big_Object_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>