force-app/main/default/objects/Archival_And_Big_Object_Link__c/fields/Big_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Big_Object_Name__c</fullName>
    <formula>Big_Object_Configuration__r.Big_Object_API_Name__c</formula>
    <label>Big Object Name</label>
    <type>Text</type>
</CustomField>