force-app/main/default/objects/Archival_And_Big_Object_Link__c/validationRules/Source_And_Related_should_be_same.validationRule-meta.xml
<ValidationRule>
    <fullName>Source_And_Related_should_be_same</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Archival_Configuration__r.Related_Object_API_Name__c == Big_Object_Configuration__r.Source_Object_API_Name__c , false, true)</errorConditionFormula>
    <errorMessage>Source and Related object name should be same</errorMessage>
</ValidationRule>